tests/snapshots/status_tests__snapshot_process_grid_multirow.snap
---
source: tests/status_tests.rs
expression: output
---
api [Initializing] ● │ cache    ● │ db    ● │ elasticsearch ● │ mailer  ●       
nginx              ● │ postgres ● │ redis ● │ scheduler     ● │ sidekiq ●       
web [Booting]      ● │ worker   ● │                                             
────────────────────────────────────────────────────────────────────────────────
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
Buffer: 0.0/50 MB (0%) | 0 lines   [TAIL]                                       
Press : for commands, / to search, q to quit
