tests/snapshots/status_tests__snapshot_process_panel_minimal_mode.snap
---
source: tests/status_tests.rs
expression: output
---
5 processes [p to expand]                                                                                               
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Buffer: 0.0/50 MB (0%) | 0 lines   [TAIL]                                                                               
Press : for commands, / to search, q to quit
