tests/snapshots/status_tests__snapshot_process_panel_summary_mode.snap
---
source: tests/status_tests.rs
expression: output
---
api ● │ db [Syncing] ● │ mailer ● │ web ● │ worker ● │ [5 of 5, p to expand]                                            
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Buffer: 0.0/50 MB (0%) | 0 lines   [TAIL]                                                                               
Press : for commands, / to search, q to quit
