tests/snapshots/status_tests__snapshot_process_panel_summary_with_hidden.snap
---
source: tests/status_tests.rs
expression: output
---
web ● │ [1 of 2, p to expand]                                                                                           
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                                        
[12:00:00] worker: Processing job #1234                                                                                 
[12:00:00] worker: Job #1234 completed successfully                                                                     
[12:00:00] worker: ERROR: Failed to process job #5678                                                                   
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Buffer: 0.0/50 MB (0%) | 8 lines   | 1 batches [TAIL]                                                                   
Press : for commands, / to search, q to quit
